tests/semantic_error/gv2_indice_nao_int.g
/* erro: indice de vetor nao e do tipo int */
principal
[ v[5] : int; c : car; ]
{
  c = 'a';
  escreva v[c];
  novalinha;
}
